--- a/web/themes/custom/icosaedrico/components/organisms/branding/branding.twig
+++ b/web/themes/custom/icosaedrico/components/organisms/branding/branding.twig
@@ -13,7 +13,7 @@
   {% endif %}
   <div class="branding__slogan">Desarrollo web</div>
 
-<div class="block-web-technologies flex mt-12">
+<div class="block-web-technologies flex pt-12">
 
   {% include "icosaedrico:icon" with {
     icon_name: "html_color",
