--- a/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
+++ b/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
@@ -70,23 +70,19 @@
 {% embed 'icosaedrico:card' with {
   card_title: label,
   card_button_text: "Ver online",
-  card_button_url: node.field_project_url.0.uri|default('/')
+  card_button_url: node.field_project_url.0.uri|default('/'),
+  card_tags: node.field_project_tech,
+  card_tag_title: item.entity.label|default('Etiqueta sin título'),
+  card_tag_url: "path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.id})",
 } %}
- {% block card_media %}
+  {% for item in card_tags %}
+    {% set card_tag_title = item.entity.label|default('Etiqueta sin título') %}
+    {% set card_tag_url = path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.id}) %}
+  {% endfor %}
+  {% block card_media %}
     {{ content.field_project_images }}
   {% endblock %}
   {% block card_content %}
-   {% for item in node.field_project_tech %}
-        {% set term_url = path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.id}) %}
-        {% set tagTitle = item.entity.label|default('Etiqueta sin título') %}
-        {% include 'icosaedrico:badge' with {
-          badge_text: tagTitle,
-          badge_href: term_url,
-          badge_target: '_blank',
-          badge_color: 'primary',
-          badge_size: 'sm'
-        } only %}
-      {% endfor %}
   {% endblock %}
 {% endembed %}
 
