--- a/web/themes/custom/icosaedrico/templates/layouts/page.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/page.html.twig
@@ -43,9 +43,9 @@
  * @see html.html.twig
  */
 #}
-<div class="layout-container container px-20 mx-auto">
+<div class="layout-container container px-20 py-4 mx-auto">
 
-  <header role="banner" class="pb-8">
+  <header role="banner">
     {{ page.header }}
   </header>
 
