--- a/web/themes/custom/icosaedrico/components/molecules/card/card.twig
+++ b/web/themes/custom/icosaedrico/components/molecules/card/card.twig
@@ -18,7 +18,9 @@
 ]
 %}
 <div class="{{ classes_wrapper|join(' ') }}">
-    {% block card_media %}{% endblock %}
+    <div class="card-picture basis-1/3 shrink-0">
+      {% block card_media %}{% endblock %}
+    </div>
   <div class="{{ classes_body|join(' ') }}">
     <h3 class="card-title">
       {{ card_title }}
@@ -26,16 +28,18 @@
     {% if card_date is not empty %}
     <div class="flex items-center text-sm text-gray-500 dark:text-gray-400">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-date" viewBox="0 0 16 16">
-          <path d="M6.445 11.688V6.354h-.633A13 13 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23"></path>
-          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"></path>
-        </svg>
+        <path d="M6.445 11.688V6.354h-.633A13 13 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23"></path>
+        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"></path>
+      </svg>
       <date class="ps-2">
         {{ card_date }}
       </date>
     </div>
     {% endif %}
+    <div class="card-content w-full">
+      {% block card_content %}
+    </div>
     <div class="card-actions justify-between items-center">
-    {% block card_content %}
     {% endblock %}
       {% include 'icosaedrico:button' with {
         button_tag: "a",
@@ -46,7 +50,6 @@
         button_target: '_self',
         button_icon: "arrow-right"
       } only %}
-
       {% include 'icosaedrico:badge' with {
           badge_text: card_tag_title,
           badge_href: card_tag_url,
@@ -54,10 +57,6 @@
           badge_color: 'primary',
           badge_size: 'sm'
         } only %}
-
-
-
-
     </div>
   </div>
 </div>
