--- a/web/themes/custom/icosaedrico/templates/field/field--media--image.html.twig
+++ b/web/themes/custom/icosaedrico/templates/field/field--media--image.html.twig
@@ -55,16 +55,14 @@
     {% endfor %}
   {% endif %}
 {% else %}
-  <div{{ attributes }}>
     <div{{ title_attributes.addClass(title_classes) }}>{{ label }}</div>
     {% if multiple %}
       <div>
     {% endif %}
     {% for item in items %}
-      <div{{ item.attributes }}>{{ item.content }}</div>
+      {{ item.attributes }}{{ item.content }}
     {% endfor %}
     {% if multiple %}
       </div>
     {% endif %}
-  </div>
 {% endif %}
