--- a/web/themes/custom/icosaedrico/templates/forms/input.html.twig
+++ b/web/themes/custom/icosaedrico/templates/forms/input.html.twig
@@ -10,18 +10,7 @@
  * @see template_preprocess_input()
  */
 #}
-{# {% if attributes.id == "edit-submit" %}
-  {% set classes_2 = ["btn-success"] %}
-  {% elseif attributes.id == 'edit-discard-changes' %}
-  {% set classes_2 = ["btn-warning"] %}
-  {% elseif attributes.id == 'edit-revert' %}
-  {% set classes_2 = ["btn-error"] %}
-{% endif %}
-
-{% if attributes.type == 'submit' %}
-  {% set classes = ["btn",] %}
-  {% elseif attributes.type == 'checkbox' %}
-  {% set classes = ["checkbox", "checkbox-info"] %}
-{% endif %} #}
-
-<input{{ attributes }} />{{ children }}
+{% include "icosaedrico:input" with {
+  input_attributes: attributes,
+  input_childen: children,
+} only %}
