--- a/web/themes/custom/icosaedrico/templates/content/node--article--card.html.twig
+++ b/web/themes/custom/icosaedrico/templates/content/node--article--card.html.twig
@@ -72,6 +72,7 @@
   card_date: node.getCreatedTime|format_date('long'),
   card_button_text: "Leer más",
   card_button_url: url,
+  card_url: url,
   card_responsive: true,
   card_tags: node.field_tags,
   card_tag_title: item.entity.label|default('Etiqueta sin título'),
