--- a/web/themes/custom/icosaedrico/templates/field/image.html.twig
+++ b/web/themes/custom/icosaedrico/templates/field/image.html.twig
@@ -15,5 +15,6 @@
   image_height: attributes.height,
   image_src: attributes.src,
   image_alt: attributes.alt,
-  image_loading: attributes.loading
+  image_loading: attributes.loading,
+  image_responsive: image_responsive|default(true)
 } only %}
