--- a/web/themes/custom/icosaedrico/templates/layouts/region--header.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/region--header.html.twig
@@ -42,6 +42,7 @@
         </ul>
       </div>
       <img src="/{{ directory ~ '/logo.svg' }}" alt="{{ 'Inicio'|t }}" width="72" fetchpriority="high" />
+      <a href="/" class="branding__title" rel="home">xacobe.<span class="branding__title--suffix">net</span></a>
     </div>
     <div class="navbar-center hidden lg:flex">
       {{content.icosaedrico_main_menu}}
