--- a/web/themes/custom/icosaedrico/components/image/image.twig
+++ b/web/themes/custom/icosaedrico/components/image/image.twig
@@ -1,1 +1,11 @@
-<img src="{{ image_src }}" width="{{ image_width }}" height="{{ image_height }}" alt="{{ image_alt }}" loading="{{ image_loading }}"/>
+{% set image_classes = [
+  image_responsive ? "h-auto w-full",
+] %}
+<img
+  src="{{ image_src }}"
+  class="{{ image_classes|join(" ") }}"
+  width="{{ image_width }}"
+  height="{{ image_height }}"
+  alt="{{ image_alt }}"
+  loading="{{ image_loading }}"
+/>
