--- a/web/themes/custom/icosaedrico/templates/views/views-view-list--blog--blog_page_list.html.twig
+++ b/web/themes/custom/icosaedrico/templates/views/views-view-list--blog--blog_page_list.html.twig
@@ -50,7 +50,20 @@
  * @see template_preprocess_views_view_list()
  */
 #}
-
+<div class="flex items-center justify-between bg-white bg-gray-900 p-2">
+    {% if title %}
+      {% include "icosaedrico:heading" with {
+        heading_title: title,
+        heading_tag: "h1",
+      } %}
+    {% endif %}
+    <button class="focus:outline-none">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-600 transition-colors duration-300 transform text-gray-400 hover:text-blue-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+      </svg>
+    </button>
+  </div>
+  <hr class="my-8 border-gray-200 border-gray-700">
 {% embed 'icosaedrico:grid' with {
   grid_title: title,
   grid_cols: "0",
