--- a/web/themes/custom/icosaedrico/components/organisms/main_navigation/main_navigation.twig
+++ b/web/themes/custom/icosaedrico/components/organisms/main_navigation/main_navigation.twig
@@ -3,7 +3,7 @@
   "flex",
   "justify-center",
 ] %}
-    <div
+    <nav
       role="navigation" aria-labelledby="{{ heading_id }}" {{ attributes|without('role', 'aria-labelledby').addClass(classes) }}>
       {# Label. If not displayed, we still provide it for screen readers. #}
       {% if not configuration.label_display %}
@@ -44,4 +44,4 @@
           {% endmacro %}
 
         {% endblock %}
-      </div>
+      </nav>
