--- a/web/themes/custom/icosaedrico/templates/navigation/menu-local-tasks.html.twig
+++ b/web/themes/custom/icosaedrico/templates/navigation/menu-local-tasks.html.twig
@@ -13,7 +13,8 @@
 #}
     {% embed 'icosaedrico:tabs'  with {
   tab_type: "lifted",
-  tab_size: "lg"
+  tab_size: "lg",
+  tab_classes: "max-w-prose mx-auto"
 } %}
 {% block tab_content_primary %}
   {% if primary %}
