--- a/web/themes/custom/icosaedrico/templates/layouts/html.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/html.html.twig
@@ -34,7 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <js-placeholder token="{{ placeholder_token }}">
   </head>
-  <body{{ attributes.addClass("container") }}>
+  <body{{ attributes }}>
     {#
       Keyboard navigation/accessibility link to main content section in
       page.html.twig.
