--- a/web/themes/custom/icosaedrico/css/output.css
+++ b/web/themes/custom/icosaedrico/css/output.css
@@ -9614,6 +9614,10 @@ html:has(.drawer-open.drawer-open) {
   margin-top: 2rem;
 }
 
+.mt-auto {
+  margin-top: auto;
+}
+
 .box-border {
   box-sizing: border-box;
 }
