--- a/web/themes/custom/icosaedrico/components/atoms/tabs/tabs.twig
+++ b/web/themes/custom/icosaedrico/components/atoms/tabs/tabs.twig
@@ -1,5 +1,6 @@
 {% set tab_classes = [
     "tabs",
+    "flex",
     tab_type ? "tabs-" ~ tab_type,
     tab_size ? "tabs-" ~ tab_size,
     tab_classes,
