--- a/web/themes/custom/icosaedrico/templates/navigation/menu-local-task.html.twig
+++ b/web/themes/custom/icosaedrico/templates/navigation/menu-local-task.html.twig
@@ -22,7 +22,7 @@
     icon_href: link['#url'],
     icon_text_position: "bottom",
     icon_svg_size: "16",
-    icon_href_classes: "tab",
+    icon_href_classes: "tab text-xs",
   } %}
 {% else %}
   {{ link }}
