--- a/web/themes/custom/icosaedrico/components/organisms/branding/branding.css
+++ b/web/themes/custom/icosaedrico/components/organisms/branding/branding.css
@@ -2,7 +2,9 @@
   font-family: "Lobster", sans-serif;
   font-size: 4.8rem;
 }
-
+header .branding__title {
+  font-size: 2.4rem;
+}
 .branding__title--suffix {
   color: orange;
 }
@@ -15,4 +17,7 @@
   font-weight: bold;
   /* width: 100%; */
   text-align: center;
+}
+header .branding__logo {
+  width: 4rem;
 }
