--- a/web/themes/custom/icosaedrico/templates/layouts/region--header.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/region--header.html.twig
@@ -17,41 +17,18 @@
   {% endif %}
   <nav class="navbar bg-base-100">
     <div class="flex-1">
-      <div class="dropdown">
-        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewbox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16"/></svg>
-        </div>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-          <li>
-            <a>Item 1</a>
-          </li>
-          <li>
-            <a>Parent</a>
-            <ul class="p-2">
-              <li>
-                <a>Submenu 1</a>
-              </li>
-              <li>
-                <a>Submenu 2</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a>Item 3</a>
-          </li>
-        </ul>
-      </div>
      {{ content.icosaedrico_site_branding }}
-     </div>
-     <div class="text-center hidden lg:flex">
-      {{content.icosaedrico_main_menu}}
-      {{ content|without(
-        'icosaedrico_main_menu',
-        'icosaedrico_site_branding',
-        ) }}
+    </div>
+    <div class="text-center hidden lg:flex">
+     {{content.icosaedrico_main_menu}}
+     {{ content|without(
+       'icosaedrico_main_menu',
+       'icosaedrico_site_branding',
+       ) }}
     </div>
     <div class="flex-1 justify-end">
-      {% include 'icosaedrico:theme_switch' %}
+      {# {% include 'icosaedrico:theme_switch' %} #}
+    </div>
   </nav>
 
   {% if attributes is not empty %}
