--- a/web/themes/custom/icosaedrico/templates/navigation/menu-local-tasks.html.twig
+++ b/web/themes/custom/icosaedrico/templates/navigation/menu-local-tasks.html.twig
@@ -14,7 +14,7 @@
     {% embed 'icosaedrico:tabs'  with {
   tab_type: "lifted",
   tab_size: "lg",
-  tab_classes: "max-w-prose mx-auto"
+  tab_classes: "max-w-prose mx-auto justify-center my-4"
 } %}
 {% block tab_content_primary %}
   {% if primary %}
