--- a/web/themes/custom/icosaedrico/components/atoms/icon/icon.twig
+++ b/web/themes/custom/icosaedrico/components/atoms/icon/icon.twig
@@ -9,21 +9,20 @@
   icon_text_position == "left" ? "flex-row",
   icon_text_position == "bottom" ? "flex-col",
   icon_text_position == "top" ? "flex-col-reverse",
+  icon_text_position == "hidden" ? "mb-16",
    "p-" ~ icon_svg_stroke_width,
   icon_classes
 ]
 %}
 
 {% set icon_text_classes = [
-  icon_text_position == "bottom" ? "mt-2"
+  icon_text_position == "bottom" ? "mt-2",
+  icon_text_position == "hidden" ? "hidden",
 ] %}
-{% if icon_href is not empty %}
+<div class="{{ icon_classes|join(" ") }}">
+{% if icon_link_wrap %}
 <a href="{{ icon_href }}" {{ attributes.addClass(classes, icon_href_classes) }}>
 {% endif %}
-{% if icon_text is not empty %}
-<i class="{{ icon_classes|join(' ') }}">
-{% endif %}
-
   <svg xmlns="http://www.w3.org/2000/svg"
     width="{{ icon_svg_size|default('16') }}"
     height="{{ icon_svg_size|default('16') }}"
@@ -32,14 +31,12 @@
     stroke-width="{{ icon_svg_stroke_width }}"
     class="bi bi-{{ icon_name }} {{ icon_svg_classes }} overflow-visible"
     viewBox="0 0 16 16">
-    {{ source(componentMetadata.path ~ '/icons/' ~ (icon_name|striptags|default('knife')) ~ '.svg') }}
+    {{ source(componentMetadata.path ~ '/icons/' ~ (icon_name|default('knife')) ~ '.svg') }}
   </svg>
   {% if icon_text is not empty %}
-  <p class="{{ icon_text_classes|join(' ') }}">{{ icon_text|default("") }}</p>
+  <p class="{{ icon_text_classes|join(" ") }}">{{ icon_text }}</p>
   {% endif %}
-{% if icon_text is not empty %}
-</i>
-{% endif %}
-{% if icon_href is not empty %}
+{% if icon_link_wrap %}
 </a>
 {% endif %}
+</div>
