--- a/web/themes/custom/icosaedrico/templates/paragraphs/paragraph--icon.html.twig
+++ b/web/themes/custom/icosaedrico/templates/paragraphs/paragraph--icon.html.twig
@@ -49,6 +49,7 @@
           icon_svg_fill: content.field_icon_svg_fill_color['#items'].0.value|default(),
           icon_svg_stroke: content.field_icon_svg_stroke_color['#items'].0.value|default(),
           icon_svg_stroke_width: content.field_icon_svg_stroke_width['#items'].0.value|default(),
+          icon_link_wrap: content.field_icon_link_wrap['#items'].0.value|default(),
         } %}
     {% endblock %}
 {% endblock paragraph %}
